--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,28 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/main.ts",
+        "src": "dist/main.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "src/main.ts",
-        "methods": ["GET"]
+        "src": "/ (.*)",
+        "dest": "dist/main.js",
+        "methods": [
+          "GET",
+          "POST",
+          "PUT",
+          "DELETE",
+          "OPTIONS",
+          "PATCH"
+        ],
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
+          "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
+          "Access-Control-Allow-Credentials": "true"
+        }
       }
     ]
   }
-  
