--- a/vercel.json
+++ b/vercel.json
@@ -2,28 +2,20 @@
     "version": 2,
     "builds": [
       {
-        "src": "dist/main.js",
+        "src": "nest/main.ts",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/ (.*)",
-        "dest": "dist/main.js",
-        "methods": [
-          "GET",
-          "POST",
-          "PUT",
-          "DELETE",
-          "OPTIONS",
-          "PATCH"
-        ],
+        "src": "/(.*)",
+        "dest": "nest/main.ts",
         "headers": {
           "Access-Control-Allow-Origin": "*",
-          "Access-Control-Allow-Methods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
-          "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
-          "Access-Control-Allow-Credentials": "true"
+          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+          "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept"
         }
       }
     ]
   }
+  
